# computervision

./: .gitignore  CMakeLists.txt  LICENSE  start.txt
data/training/: csv.txt
src/: computerVisionCam.cpp  lbp_training.cpp
