cmake_minimum_required (VERSION 2.8)
SET(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} /usr/local/lib/cmake/)
project (computerVisionCam)
find_package(raspicam REQUIRED)
find_package(OpenCV)
IF  ( OpenCV_FOUND AND raspicam_CV_FOUND)
    MESSAGE(STATUS "COMPILING")
    add_executable (computerVisionCam src/computerVisionCam.cpp)
    target_link_libraries (computerVisionCam ${raspicam_CV_LIBS} ${raspicam_LIBS} ${OpenCV_LIBS})
ELSE()
        MESSAGE(FATAL_ERROR "Can't find OpenCV")
ENDIF()
